--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3063,9 +3063,11 @@ a.dp-choose-date {
     overflow:hidden;
     height:0;
     transition: .3s;
+    font-weight:600;
 }
 #revenue2 .details.active {
-    height:144px;
+/*    height:144px;*/
+    height:inherit;
     transition: .3s;
 }
 #revenue2 #details-handle {
@@ -3083,6 +3085,46 @@ a.dp-choose-date {
     left:12px;
 }
 
+
+#revenue2 .details #table .child-details-wrapper.active {
+    transition: .3s;
+    height:120px;
+}
+#revenue2 .details #table .child-details-wrapper {
+    transition: .3s;
+    font-size:80%;
+    height:0;
+    overflow:hidden;
+}
+#revenue2 .details #table .child-details-wrapper .table-item  {
+    text-transform: none;
+    border-top: 1px solid #CCC;
+    height:30px;
+}
+#revenue2 .details #table .child-details-wrapper .table-item div {
+    height:20px;
+    line-height:20px;
+}
+#revenue2 .details #table .child-details-wrapper .table-item .title-text {
+    margin-left:10%;
+}
+#revenue2  #filter-caret-wrapper {
+    position:absolute;
+    right:0;
+    top:-12px;
+}
+#revenue2 #filter-caret-wrapper .filter-caret.active {
+    transform: rotate(180deg);
+    transition: .3s;
+}
+#revenue2 #filter-caret-wrapper .filter-caret {
+    transform: rotate(0);
+    transition: .3s;
+}
+
+
+
+
 #revenue2 .details #header {
     font-size:140%;
 }
@@ -3093,11 +3135,8 @@ a.dp-choose-date {
     margin-bottom:0;
 }
 #revenue2 .details #table .table-item {
-    border-top: 1px solid #999;
-    padding-top:10px;
-    padding-right:5px;
-    padding-left:5px;
-    padding-bottom:5px;
+    border-top: 1px solid #333;
+    padding:5px 0;
     line-height:100%;
     height:40px;
     text-transform: uppercase;
@@ -3109,9 +3148,16 @@ a.dp-choose-date {
 #revenue2 .details #table .table-item div {
     padding:0!important;
     margin-bottom:0;
+    height:30px;
+    line-height:30px;
 }
 #revenue2 .details #table .table-item .down {
     transform: rotate(180deg);
+}
+
+#revenue2 .details #table .table-item #to-val,
+#revenue2 .details #table .table-item #from-val {
+    display:inline-block;
 }
 
 #revenue2 .details #table .table-item #change,
@@ -3122,6 +3168,7 @@ a.dp-choose-date {
 #revenue2 .details #table .table-item #from-val 
 {
     color:gray;
+    width:33%;
 }
 #revenue2 #details-handle {
     display:inline-block;
@@ -3147,7 +3194,11 @@ a.dp-choose-date {
 
 @media (max-width: 1199px) {
     #revenue2 .details #table .table-item {
-        margin-top:10px;
+/*        margin-top:10px;*/
+    }
+    #revenue2 .details #table .table-item div {
+        height:auto;
+        line-height:auto;
     }
     #revenue2 .details.active {
         height:200px;
