--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2810,15 +2810,7 @@ form.inline-block {
 /******************************************************/
 /********************** REVENUE2 **********************/
 /******************************************************/
-.bar-transition {
-    height:100%;
-    position:relative;
-}
-// .bar-transition.activate {
-//     transition:.3s;
-//     animation-timing-function: cubic-bezier(.12,0,.8,1);
-//     height:100%;
-// }
+
 
 #revenue2 {
     margin-bottom: 30px;
@@ -2893,6 +2885,12 @@ a.dp-choose-date {
     font-weight: 500;
     margin-right:10px;
 }
+
+
+/******************************************************/
+/******************** REVENUE 2 GRAPHIC ***************/
+/******************************************************/
+
 
 #revenue2 .graphic {
     padding-top:2em;
@@ -3059,17 +3057,26 @@ a.dp-choose-date {
     left:110.5px;
 }
 
+
+/******************************************************/
+/******************** REVENUE 2 DETAILS ***************/
+/******************************************************/
+
+
 #revenue2 .details {
     overflow:hidden;
-    height:0;
-    transition: .3s;
     font-weight:600;
+    max-height:0;
+    transition: max-height .5s ease-out;
 }
 #revenue2 .details.active {
-/*    height:144px;*/
-    height:inherit;
-    transition: .3s;
+    max-height:1024px;
+    transition: max-height .5s ease-in;
 }
+
+                                                                        
+                                                                        //HANDLE KNOB
+                                                                        
 #revenue2 #details-handle {
     cursor:pointer;
 }
@@ -3086,44 +3093,10 @@ a.dp-choose-date {
 }
 
 
-#revenue2 .details #table .child-details-wrapper.active {
-    transition: .3s;
-    height:120px;
-}
-#revenue2 .details #table .child-details-wrapper {
-    transition: .3s;
-    font-size:80%;
-    height:0;
-    overflow:hidden;
-}
-#revenue2 .details #table .child-details-wrapper .table-item  {
-    text-transform: none;
-    border-top: 1px solid #CCC;
-    height:30px;
-}
-#revenue2 .details #table .child-details-wrapper .table-item div {
-    height:20px;
-    line-height:20px;
-}
-#revenue2 .details #table .child-details-wrapper .table-item .title-text {
-    margin-left:10%;
-}
-#revenue2  #filter-caret-wrapper {
-    position:absolute;
-    right:0;
-    top:-12px;
-}
-#revenue2 #filter-caret-wrapper .filter-caret.active {
-    transform: rotate(180deg);
-    transition: .3s;
-}
-#revenue2 #filter-caret-wrapper .filter-caret {
-    transform: rotate(0);
-    transition: .3s;
-}
 
-
-
+                                                                        
+                                                                        //TABLE GENERAL
+                                                                        
 
 #revenue2 .details #header {
     font-size:140%;
@@ -3192,6 +3165,49 @@ a.dp-choose-date {
     margin-left:10px;
 }
 
+                                                                        
+                                                                        //CHILD DETAILS
+                                                                        
+
+#revenue2 .details #table .child-details-wrapper.active {
+    transition: max-height 2s ease-in;
+    max-height:1024px;
+}
+#revenue2 .details #table .child-details-wrapper {
+    transition: max-height 2s ease-out;
+    font-size:80%;
+    max-height:0;
+    overflow:hidden;
+}
+#revenue2 .details #table .child-details-wrapper .table-item  {
+    text-transform: none;
+    border-top: 1px solid #CCC;
+    height:30px;
+}
+#revenue2 .details #table .child-details-wrapper .table-item div {
+    height:20px;
+    line-height:20px;
+}
+#revenue2 .details #table .child-details-wrapper .table-item .title-text {
+    margin-left:10%;
+}
+#revenue2  #filter-caret-wrapper {
+    position:absolute;
+    right:0;
+    top:-12px;
+}
+#revenue2 #filter-caret-wrapper .filter-caret.active {
+    transform: rotate(180deg);
+    transition: .3s;
+}
+#revenue2 #filter-caret-wrapper .filter-caret {
+    transform: rotate(0);
+    transition: .3s;
+}
+
+                                                                        
+                                                                        //@MEDIA QUERIES
+                                                                        
 @media (max-width: 1199px) {
     #revenue2 .details #table .table-item {
 /*        margin-top:10px;*/
