Box office by ticket type is ready. re #357.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3170,11 +3170,11 @@ a.dp-choose-date {
                                                                         
 
 #revenue2 .details #table .child-details-wrapper.active {
-    transition: max-height 2s ease-in;
+    transition: max-height .5s ease-in;
     max-height:1024px;
 }
 #revenue2 .details #table .child-details-wrapper {
-    transition: max-height 2s ease-out;
+    transition: max-height .5s ease-out;
     font-size:80%;
     max-height:0;
     overflow:hidden;
