Revenue details tweak to show big numbers.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -594,7 +594,7 @@ div.user-wrapper {
 .filter-caret {
     height: 7px;
     position: absolute;
-    right: 25px;
+    right: 18px;
     top: 30px;
     width: 11px;
 }
@@ -3118,6 +3118,9 @@ a.dp-choose-date {
 #revenue2 .details #table .table-item svg {
     vertical-align: middle;
 }
+#revenue2 .details #table .table-item svg.long-arrow {
+    margin: 0 4px;
+}
 #revenue2 .details #table .table-item div {
     padding:0!important;
     margin-bottom:0;
@@ -3161,8 +3164,8 @@ a.dp-choose-date {
 #revenue2 .details #table .table-item .left-line {
     border-left: 1px solid #CCC;
 }
-#revenue2 .details #table .table-item .left-line div {
-    margin-left:10px;
+#revenue2 .details #table .table-item .left-line > div {
+    margin-left:5%;
 }
 
                                                                         
