Revenue breadcrumb added test #355

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2953,6 +2953,7 @@ a.dp-choose-date {
     height:325px;
     display:inline-block;
     position:relative;
+    cursor:pointer;
 }
 #revenue2 .graphic #gbody #gbars .gbar .glabel {
     position:absolute;
@@ -3069,6 +3070,11 @@ a.dp-choose-date {
     max-height:0;
     transition: max-height .5s ease-out;
 }
+
+#revenue2 .details a {
+    cursor:pointer;
+}
+
 #revenue2 .details.active {
     max-height:1024px;
     transition: max-height .5s ease-in;
