User permissions: edit goals visible for goals-set capable users. re #391

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -226,6 +226,10 @@ header {
     }
 }
 
+body.darken-background-active {
+    height:100%;
+    overflow:hidden;
+}
 div#darken-background.active {
 	display:block;
 }
