Revenue: partial periods now compare to partial periods.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3223,7 +3223,7 @@ a.dp-choose-date {
     top:6px;
     width:30px;
     text-align:center;
-    padding-top:12px;
+    padding-top:12px !important;
 }
 #revenue2 .details #table .table-item #filter-caret-wrapper .filter-caret {
     position:static;
