--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2967,7 +2967,7 @@ a.dp-choose-date {
 }
 #revenue2 .graphic #gbody #gbars .gbar-sections {
     position:absolute;
-    bottom: 24px;
+    bottom: 25px;
     width: 100%;
     height:1px;
     transition: height 600ms cubic-bezier(0.1, -1.2, 0.1, 2);
@@ -2975,7 +2975,7 @@ a.dp-choose-date {
 #revenue2 .graphic #gbody #gbars .gbar-section {
     height: 33.33333333%;
     width: 100%;
-    display:inline-block;
+    display:block;
 }
 
 .weather-popup {
