FAQs section: minor changes ready. re #383

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3341,7 +3341,10 @@ a.dp-choose-date {
 /******************************************************/
 /********************** FAQs Section ******************/
 /******************************************************/
-
+div.page.footer-box.faqs-page .form-group {
+    margin-left:20px;
+    vertical-align:20%;
+}
 .faqs-page .faq-title {
     cursor:pointer;
 }
