--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1,5 +1,58 @@
 @import "colors";
 
+#membership-goals, #sales-goals {
+    overflow:initial;
+}
+.plus-sign-menu {
+    z-index:1;
+}
+.plus-sign-menu .menu-content.fade.in {
+    display:block;
+}
+.plus-sign-menu .menu-content {
+    display:none;
+    background-color:@white;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    font-size:120%;
+    padding:7.5px;
+    text-align: center;
+
+    position:absolute;
+    width: 150px;
+    top:-37px;
+    right:-20px;
+}
+.plus-sign-menu .menu-content .action {
+    display:inline-block;
+    border-right:1px solid @lightmediumgrey;
+    padding: 0 5px;
+}
+.plus-sign-menu .menu-content .action:last-child {
+    border-right:none;
+}
+.plus-sign-menu .menu-content a {
+    color:inherit;
+}
+.plus-sign-menu .menu-content a:hover {
+    text-decoration:none;
+    color:@aqua;
+}
+
+.plus-sign-menu .menu-content .arrow {
+    position: absolute;
+    top:100%;
+    right:20px;
+    margin-right:-3px;
+    width: 0; 
+    height: 0; 
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid @white;
+}
+
+
 @media print {
     
     body .unprintable {
@@ -23,6 +76,7 @@
         width:100%;
         border-left: 15px solid white;
         border-right: 15px solid white;
+        border-top:1px solid white;
         background-color: white;
     }
 
@@ -32,6 +86,10 @@
         page-break-inside:avoid;
     }
 
+    .unprintable.solo {
+        width:100%;
+        display:block;
+    }
     
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
     .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12,
@@ -95,11 +153,14 @@
     }
 
     
+    .stat-block .label {
+        font-size:80%;
+    }
     .stat-block.stats-bottom {
         border:1px solid @lightmediumgrey;
     }
     .stat-block.stats-bottom .stat {
-        font-size: 300%;
+        font-size: 400%;
     }
     
 
