--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -20,9 +20,10 @@
     text-align: center;
 
     position:absolute;
-    width: 150px;
     top:-37px;
     right:-20px;
+    
+     white-space : nowrap;
 }
 .plus-sign-menu .menu-content .action {
     display:inline-block;
@@ -52,6 +53,9 @@
     border-top: 6px solid @white;
 }
 
+.saving .unsavable{
+    display:none;
+}
 
 @media print {
     
