Login view fixed.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -16,6 +16,9 @@ body, p, td, label, .checkbox label {
 /******** GLOBALS ********/
 /*************************/
 
+html {
+    height: 100%;
+}
 body, div#login-component {
     height: 100%;
     overflow-x:hidden;
