Revenue Graph: added attendance in data details. test #416

--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -11,6 +11,7 @@
 @lightblack: rgba(49,45,45,1);
 @darkgrey: rgba(66,66,66,1);
 @darkmediumgrey: rgba(82,82,82,1);
+@halfdarkmediumgrey: rgba(115, 115, 115,1);
 @mediumgrey: rgba(135,135,135,1);
 @lightmediumgrey: rgba(185,185,185,1);
 @lightgrey: rgba(236,234,231,1);
