--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -54,6 +54,28 @@
     display:none;
 }
 
+.weather-popup .attendance
+{
+    background-color:@halfdarkmediumgrey;
+    color:white;
+    width:100%;
+    padding:4px 12px;
+    font-weight:600;
+    margin-bottom:0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+#revenue2 .details .add-left-padding {
+    padding-left: 7.5px;
+}
+#revenue2 .details #attendance-detail {
+    margin-top:12px;
+}
+#revenue2 .details #attendance-detail div {
+    font-size:90%;
+    padding-top:4px;
+}
+
 @media print {
     
     body .unprintable {
