National Aquarium added. test #437

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -76,6 +76,11 @@
     padding-top:4px;
 }
 
+#customer-logo img {
+    width:330px;
+    margin-bottom:24px;
+}
+
 @media print {
     
     body .unprintable {
