--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -56,7 +56,7 @@ header {
             text-align: left;
             background-color:inherit;
         }
-        img {
+        svg {
             position: relative;
             left: 50%;
             top: 50%;
@@ -1793,15 +1793,15 @@ body > .popover.top>.arrow:after {
             fill: @rust;
         }
     }
-    .stat:after {
-        content: '%';
-        font-size: 50%;
-        position: relative;
-        top: -7px;
-    }
-    .change:after {
-        content: '%';
-    }
+    // .stat:after {
+    //     content: '%';
+    //     font-size: 50%;
+    //     position: relative;
+    //     top: -7px;
+    // }
+    // .change:after {
+    //     content: '%';
+    // }
 }
 #members-captured {
     .stat,
@@ -1815,15 +1815,15 @@ body > .popover.top>.arrow:after {
             fill: rgba(56,21,77,1);
         }
     }
-    .stat:after {
-        content: '%';
-        font-size: 50%;
-        position: relative;
-        top: -7px;
-    }
-    .change:after {
-        content: '%';
-    }
+    // .stat:after {
+    //     content: '%';
+    //     font-size: 50%;
+    //     position: relative;
+    //     top: -7px;
+    // }
+    // .change:after {
+    //     content: '%';
+    // }
 }
 #members-frequency {
     .stat,
@@ -1887,13 +1887,13 @@ body > .popover.top>.arrow:after {
         padding-top: 6px;
         text-transform: initial;
     }
-    .stat:after {
-        content: 'k';
-        font-size: 50%;
-    }
-    .change:after {
-        content: 'k';
-    }
+    // .stat:after {
+    //     content: 'k';
+    //     font-size: 50%;
+    // }
+    // .change:after {
+    //     content: 'k';
+    // }
 }
 #members-percap {
     .stat,
@@ -2804,9 +2804,16 @@ form.inline-block {
 }
 
 #revenue2 select.form-control {
-    background-image: url('../img/caret.svg');
-    background-repeat: no-repeat;
-    background-position: 100% 50%;
+    // background-image: url('../img/caret.svg');
+    // background-repeat: no-repeat;
+    // background-position: 100% 50%;
+}
+#revenue2 .revenue-dropdown {
+    position:relative;
+}
+#revenue2 .revenue-dropdown .filter-caret {
+    top:50%;
+    margin-top:-2px;
 }
 
 form.datepicker-form {
