--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -81,6 +81,56 @@
     margin-bottom:24px;
 }
 
+.row#reporting-on-action-menu {
+    position:relative;
+}
+
+.row#reporting-on-action-menu #main-action-menu {
+    position:absolute;
+    top:12px;
+    right:7.5px;
+    cursor:pointer;
+}
+
+.row#reporting-on-action-menu #main-action-menu svg.plus-sign-button {
+    width:16px;
+    height:16px;
+}
+
+.row#reporting-on-action-menu #main-action-menu .plus-sign-menu .menu-content {
+    top:-10px;
+    right:22px;
+}
+
+.row#reporting-on-action-menu #main-action-menu .plus-sign-menu .menu-content .arrow {
+    top:50%;
+    right:-12px;
+    margin-right:0px;
+    margin-top:-6px;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid @white;
+    border-top: 6px solid transparent;
+}
+
+.saving .stat-block .label {
+    // font-size:80%;
+    font-family:'Raleway', sans-serif;
+}
+.saving .stat-block .label:after {
+    font-size:100%;
+}
+.saving  .stat-block.stats-bottom {
+    border:1px solid @lightmediumgrey;
+}
+.saving .stat-block.stats-bottom .stat {
+    font-size: 330%;
+}
+
+.saving div.kilo .stat-block.stats-bottom .stat {
+    font-size:270%;
+}
+
+
 @media print {
     
     body .unprintable {
