Print/Save: Print whole page is ready. re #254

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3255,44 +3255,44 @@ a.dp-choose-date {
                                                                         //@MEDIA QUERIES
                                                                         
 @media (max-width: 1199px) {
-    #revenue2 .details #table .table-item {
-/*        margin-top:10px;*/
-    }
-    #revenue2 .details #table .table-item div {
-        height:auto;
-        line-height:auto;
-    }
-    
-    #revenue2 .details .details-header #table .table-item {
-        height:30px;
-    }
-    
-    #revenue2 .details #table .child-details-wrapper .table-item {
-        height:48px;
-    }
-}
-@media (max-width: 991px) {
-    #revenue2 .details #table .table-item {
-        height:auto;
-    }
-    #revenue2 .details #table .table-item .left-line {
-        border-left: none;
-    }
-    #revenue2 .details #table .table-item .left-line div {
-        margin-left:0;
-    }
-
-    #revenue2 .details #table .table-item div.title {
-        text-align:center;
-        margin-bottom:5px;
-    }
-    
-    #revenue2 .details #table .child-details-wrapper .table-item {
-        height:72px;
-    }
-
-}
-@media (max-width: 767px) {
+//     #revenue2 .details #table .table-item {
+// /*        margin-top:10px;*/
+//     }
+//     #revenue2 .details #table .table-item div {
+//         height:auto;
+//         line-height:auto;
+//     }
+//
+//     #revenue2 .details .details-header #table .table-item {
+//         height:30px;
+//     }
+//
+//     #revenue2 .details #table .child-details-wrapper .table-item {
+//         height:48px;
+//     }
+// }
+// @media (max-width: 991px) {
+//     #revenue2 .details #table .table-item {
+//         height:auto;
+//     }
+//     #revenue2 .details #table .table-item .left-line {
+//         border-left: none;
+//     }
+//     #revenue2 .details #table .table-item .left-line div {
+//         margin-left:0;
+//     }
+//
+//     #revenue2 .details #table .table-item div.title {
+//         text-align:center;
+//         margin-bottom:5px;
+//     }
+//
+//     #revenue2 .details #table .child-details-wrapper .table-item {
+//         height:72px;
+//     }
+//
+// }
+// @media (max-width: 767px) {
     #revenue2 .details #table .table-item div.title {
         text-align:left;
     }
