--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -81,28 +81,24 @@
     margin-bottom:24px;
 }
 
-.row#reporting-on-action-menu {
-    position:relative;
-}
-
-.row#reporting-on-action-menu #main-action-menu {
+#main-action-menu {
     position:absolute;
-    top:12px;
-    right:7.5px;
+    top:24px;
+    right:24px;
     cursor:pointer;
 }
 
-.row#reporting-on-action-menu #main-action-menu svg.plus-sign-button {
+#main-action-menu svg.plus-sign-button {
     width:16px;
     height:16px;
 }
 
-.row#reporting-on-action-menu #main-action-menu .plus-sign-menu .menu-content {
+#main-action-menu .plus-sign-menu .menu-content {
     top:-10px;
     right:22px;
 }
 
-.row#reporting-on-action-menu #main-action-menu .plus-sign-menu .menu-content .arrow {
+#main-action-menu .plus-sign-menu .menu-content .arrow {
     top:50%;
     right:-12px;
     margin-right:0px;
@@ -167,6 +163,9 @@
     .unprintable.solo {
         width:100%;
         display:block;
+    }
+    .solo .unprintable {
+        display:block !important;
     }
     
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
