--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -51,7 +51,7 @@
 }
 
 .saving .unsavable{
-    display:none;
+    display:none !important;
 }
 
 .weather-popup .attendance
@@ -99,6 +99,36 @@
 }
 
 #main-action-menu .plus-sign-menu .menu-content .arrow {
+    top:50%;
+    right:-12px;
+    margin-right:0px;
+    margin-top:-6px;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid @white;
+    border-top: 6px solid transparent;
+}
+
+.position-relative {
+    position:relative;
+}
+.widget-plus-menu {
+    position:absolute;
+    top:8px;
+    right:12px;
+    cursor:pointer;
+}
+
+.widget-plus-menu svg.plus-sign-button {
+    width:8px;
+    height:8px;
+}
+
+.widget-plus-menu .plus-sign-menu .menu-content {
+    top:-10px;
+    right:22px;
+}
+
+.widget-plus-menu .plus-sign-menu .menu-content .arrow {
     top:50%;
     right:-12px;
     margin-right:0px;
@@ -181,8 +211,11 @@
     }
 
 
-    header .klerede-logo img {
-         width: 111px;
+    header .klerede-logo svg {
+         width: 80px;
+         position: static;
+         margin-left:15px;
+         margin-top:30px;
     }
 
     div#sales-goals-widget,
