Revenue Graph: attendance tab membership color fixed. re #439

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2726,7 +2726,9 @@ div.dp-popup td.disabled {
     color: @giftstore;
 }
 .multicolor-wrapper:nth-child(4) .multicolor,
-.multicolor:nth-child(4) 
+.multicolor:nth-child(4),
+.multicolor-wrapper:last-child .multicolor,
+.multicolor:last-child 
 {
     color: @membership;
 }
@@ -2747,7 +2749,9 @@ div.dp-popup td.disabled {
     background-color: @giftstore;
 }
 .multicolor-wrapper:nth-child(4) .multicolorbg,
-.multicolorbg:nth-child(4)
+.multicolorbg:nth-child(4),
+.multicolor-wrapper:last-child .multicolorbg,
+.multicolorbg:last-child
 {
     background-color: @membership;
 }
@@ -2768,7 +2772,9 @@ div.dp-popup td.disabled {
     fill: @giftstore;
 }
 .multicolor-wrapper:nth-child(4) .multicolorfl,
-.multicolorfl:nth-child(4)
+.multicolorfl:nth-child(4),
+.multicolor-wrapper:last-child .multicolorfl,
+.multicolorfl:last-child
 {
     fill: @membership;
 }
