Member Boxes layout tweaks re #441

--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -269,9 +269,9 @@
     .stat-block.stats-bottom {
         border:1px solid @lightmediumgrey;
     }
-    .stat-block.stats-bottom .stat {
-        font-size: 400%;
-    }
+    // .stat-block.stats-bottom .stat {
+    //     font-size: 400%;
+    // }
     
 
 }
