--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1775,13 +1775,44 @@ body > .popover.top>.arrow:after {
     height: 180px;
     .label {
         color: @darkgrey;
+        font-family:inherit;
+        font-size:1.2em;
+        font-weight:400;
+    }
+    .description {
+        color: @mediumgrey;
+        font-size: 80%;
+        letter-spacing:0;
+        padding-top: 6px;
+        text-transform: initial;
     }
     .stat {
-        font-size: 4vw;
+        letter-spacing:-.03em;
+        font-size: 4.5em;
         font-weight: 800;
+        position:relative;
+        transform:none;
+        top:initial;
+        left:initial;
+        .units {
+            font-size: 50%;
+            position: absolute;
+            display:inline-block;
+            bottom: .4em;
+        }
+        .units.dollars {
+            margin-left:-.8em;
+        }
     }
 }
 #members-conversion {
+    .stat {
+        line-height:100%;
+        .units {
+            bottom:initial;
+            top: .35em;
+        }
+    }
     .stat,
     .change {
         color: @rust;
@@ -1792,25 +1823,7 @@ body > .popover.top>.arrow:after {
         path {
             fill: @rust;
         }
-        padding-top:26px;
     }
-    .label:after {
-        color: @mediumgrey;
-        content: 'Guests that become members';
-        display: block;
-        font-size: 65%;
-        padding-top: 6px;
-        text-transform: initial;
-    }
-    // .stat:after {
-    //     content: '%';
-    //     font-size: 50%;
-    //     position: relative;
-    //     top: -7px;
-    // }
-    // .change:after {
-    //     content: '%';
-    // }
 }
 #members-captured {
     .stat,
@@ -1823,25 +1836,7 @@ body > .popover.top>.arrow:after {
         path {
             fill: rgba(56,21,77,1);
         }
-        padding-top:20px;
     }
-    .label:after {
-        color: @mediumgrey;
-        content: '% that purchased at gift store';
-        display: block;
-        font-size: 65%;
-        padding-top: 6px;
-        text-transform: initial;
-    }
-    // .stat:after {
-    //     content: '%';
-    //     font-size: 50%;
-    //     position: relative;
-    //     top: -7px;
-    // }
-    // .change:after {
-    //     content: '%';
-    // }
 }
 #members-frequency {
     .stat,
@@ -1854,14 +1849,6 @@ body > .popover.top>.arrow:after {
         path {
             fill: rgba(141,168,194,1);
         }
-    }
-    .label:after {
-        color: @mediumgrey;
-        content: '# of visits per year';
-        display: block;
-        font-size: 70%;
-        padding-top: 6px;
-        text-transform: initial;
     }
 }
 #members-recency {
@@ -1876,14 +1863,6 @@ body > .popover.top>.arrow:after {
             fill: rgba(169,142,177,1);
         }
     }
-    .label:after {
-        color: @mediumgrey;
-        content: 'Time since last visit (days)';
-        display: block;
-        font-size: 70%;
-        padding-top: 6px;
-        text-transform: initial;
-    }
 }
 #members-total {
     .stat,
@@ -1897,21 +1876,6 @@ body > .popover.top>.arrow:after {
             fill: #eebb40;
         }
     }
-    .label:after {
-        color: @mediumgrey;
-        content: 'Total #';
-        display: block;
-        font-size: 70%;
-        padding-top: 6px;
-        text-transform: initial;
-    }
-    // .stat:after {
-    //     content: 'k';
-    //     font-size: 50%;
-    // }
-    // .change:after {
-    //     content: 'k';
-    // }
 }
 #members-percap {
     .stat,
@@ -1924,14 +1888,6 @@ body > .popover.top>.arrow:after {
         path {
             fill: #9e8d79;
         }
-    }
-    .label:after {
-        color: @mediumgrey;
-        content: '$ amount spent at gift store';
-        display: block;
-        font-size: 70%;
-        padding-top: 6px;
-        text-transform: initial;
     }
 }
 /***********************/
