--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -14,6 +14,7 @@
 @halfdarkmediumgrey: rgba(115, 115, 115,1);
 @mediumgrey: rgba(135,135,135,1);
 @lightmediumgrey: rgba(185,185,185,1);
+@halflightmediumgrey: #d8d8d8;
 @lightgrey: rgba(236,234,231,1);
 @white: rgba(255,255,255,1);
 
@@ -34,6 +35,9 @@
 @lightblue: rgba(212,233,246,1);
 @mediumblue: rgba(185,203,218,1);
 @verylightblue: rgba(239,247,252,1);
+
+@pink: rgba(240,80,170,1);
+
 
 @green: rgba(100,168,17,1);
 @yellowgreen: yellowgreen;
