--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3,6 +3,7 @@
 /***************************************/
 @import "bootstrap/bootstrap";
 @import (inline) "jquery-ui.min.css";
+@import (inline) "react-datepicker.min.css";
 @import "colors";
 
 body, p, td, label, .checkbox label {
@@ -2769,9 +2770,22 @@ form.inline-block {
     cursor: pointer;
     height: 20px;
     width: 20px;
+    padding-left:5px;
+    padding-top:5px;
     background-color:lightgray;
     display:inline-block;
     vertical-align: bottom;
+    svg {
+        fill:@white;
+        display:none;
+        width:10px;
+        height:10px;
+    }
+}
+.circle-checkbox.active {
+    svg {
+        display:block;
+    }
 }
 
 /******************************************************/
@@ -2848,6 +2862,9 @@ a.dp-choose-date {
 }
 #revenue2 .channel.empty {
     color:@lightmediumgrey;
+    svg {
+        display:none;
+    }
 }
 #revenue2 .channel.empty .circle-checkbox.multicolorbg  {
     background-color:@lightmediumgrey;
