--- a/laravel/resources/assets/less/new.less
+++ b/laravel/resources/assets/less/new.less
@@ -1,5 +1,167 @@
 @import "colors";
 
+.modal-backdrop.fade.in {
+    min-height:200%;
+}
+.svg-button {
+    display:inline-block;
+    background-color:@cobalt;
+    width:16px;
+    height:16px;
+    cursor:pointer;
+    .svg-button-content {
+        line-height:50%;
+        text-align:center;
+        svg {
+            display:inline;
+            fill:@white;
+            margin-top:25%;
+            width:50%;
+            height:50%;
+        }
+    }
+}
+.svg-button.inactive {
+    background-color:@mediumgrey;
+    .svg-button-content {
+        svg {
+            opacity:0;
+        }
+    }
+}
+
+.svg-button.rounded-box {
+    border-radius:20%;
+}
+
+.svg-button.circle {
+    border-radius:100%;
+}
+
+.vertical-middle {
+    vertical-align:middle;
+}
+.float-right {
+    float:right;
+}
+
+#revenue2 .modal-dialog {
+    width:50em;
+    .modal-content {
+        border-radius:0;
+        .modal-section {
+            padding-left:20px;
+            padding-right:20px;
+        }
+        .modal-header {
+            background-color:@black;
+            color:@white;
+            h3 {
+                margin:.5em 0;
+            }
+            button.close {
+                opacity:0.5;
+                svg {
+                    fill:@white;
+                }
+            }
+            button.close:hover, button.close:focus {
+                opacity:1;
+            }
+            #calendar-button-container {
+                #calendar-button {
+                    font-weight:600;
+                    top:initial;
+                    bottom:3px;
+                    svg {
+                        fill:@white;
+                        width:18px;
+                        vertical-align: bottom;
+                        margin-right:.4em;
+                    }
+                    #text {
+                        vertical-align:.2em;
+                    }
+                }
+            }
+        }
+        .modal-body {
+            .form-group#date-time {
+                input {
+                    font-weight:800;
+                    width:90px;
+                }
+                input.time {
+                    width:60px;
+                }
+                label {
+                    padding-left:10px;
+                }
+            }
+            .form-group {
+                border-bottom: 1px solid @halflightmediumgrey;
+                padding-bottom:1em;
+                input {
+                    border:none;
+                    background-color:transparent;
+                    padding-left:0;
+                    padding-right:0;
+                }
+                .form-control {
+                    color:@black;
+                    font-weight:400;
+                }
+                #header, #description {
+                    width:100%;
+                }
+                #header {
+                    font-weight:600;
+                    font-size:140%;
+                }
+
+                .svg-button.circle.category-svg-button {
+                    width:30px;
+                    height:30px;
+                }
+                .svg-button#all-day .svg-button-content{
+                    // padding-top:0;
+                }
+                #category-list {
+                    margin-top:1em;
+                    margin-left:-16px;
+                    .category-item {
+                        font-style: italic;
+                        display:inline-block;
+                        font-weight:600;
+                        color:@pink;
+                        margin-right:.2em;
+                        .svg-button.circle#remove-category-item {
+                            background-color:@pink;
+                            opacity:0;
+                        }
+                    }
+                    .category-item:hover,.category-item:focus {
+                        .svg-button.circle#remove-category-item {
+                            opacity:1;
+                        }
+                    }
+                }
+            }
+        }
+        .modal-footer {
+            text-align:center;
+            border-top:none;
+            .buttons {
+                display:inline-block;
+                button {
+                    border:none;
+                }
+            }
+        }
+        
+    }
+}
+
 .plus-sign-menu,
 .add-note-menu
 {
@@ -56,10 +218,6 @@
 
 
 
-.saving .unsavable{
-    display:none !important;
-}
-
 .weather-popup .attendance
 {
     background-color:@halfdarkmediumgrey;
@@ -71,15 +229,17 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
 
-#revenue2 .details .add-left-padding {
-    padding-left: 7.5px;
-}
-#revenue2 .details #attendance-detail {
-    margin-top:12px;
-}
-#revenue2 .details #attendance-detail div {
-    font-size:90%;
-    padding-top:4px;
+#revenue2 .details {
+    .add-left-padding {
+        padding-left: 7.5px;
+    }
+    #attendance-detail {
+       margin-top:12px;
+       div {
+            font-size:90%;
+            padding-top:4px;
+        }
+   }
 }
 
 #customer-logo img {
@@ -92,82 +252,92 @@
     top:24px;
     right:24px;
     cursor:pointer;
+    
+    svg.plus-sign-button {
+        width:16px;
+        height:16px;
+    }
+
+    .plus-sign-menu .menu-content {
+        top:-10px;
+        right:22px;
+    }
+
+    .plus-sign-menu .menu-content .arrow {
+        top:50%;
+        right:-12px;
+        margin-right:0px;
+        margin-top:-6px;
+        border-bottom: 6px solid transparent;
+        border-left: 6px solid @white;
+        border-top: 6px solid transparent;
+    }
 }
 
-#main-action-menu svg.plus-sign-button {
-    width:16px;
-    height:16px;
-}
 
-#main-action-menu .plus-sign-menu .menu-content {
-    top:-10px;
-    right:22px;
-}
-
-#main-action-menu .plus-sign-menu .menu-content .arrow {
-    top:50%;
-    right:-12px;
-    margin-right:0px;
-    margin-top:-6px;
-    border-bottom: 6px solid transparent;
-    border-left: 6px solid @white;
-    border-top: 6px solid transparent;
-}
 
 .position-relative {
     position:relative;
 }
 .widget-plus-menu {
+
     position:absolute;
     top:8px;
     right:12px;
     cursor:pointer;
+    svg.plus-sign-button {
+        width:8px;
+        height:8px;
+    }
+
+    .plus-sign-menu .menu-content {
+        top:-10px;
+        right:22px;
+    }
+
+    .plus-sign-menu .menu-content .arrow {
+        top:50%;
+        right:-12px;
+        margin-right:0px;
+        margin-top:-6px;
+        border-bottom: 6px solid transparent;
+        border-left: 6px solid @white;
+        border-top: 6px solid transparent;
+    }
 }
 
-.widget-plus-menu svg.plus-sign-button {
-    width:8px;
-    height:8px;
+
+.saving {
+    .unsavable{
+        display:none !important;
+    }
+    .stat-block {
+        .label {
+            // font-size:80%;
+            font-family:'Raleway', sans-serif;
+        }
+        .label:after {
+            font-size:100%;
+        }
+        
+    }
+    .stat-block.stats-bottom {
+        border:1px solid @lightmediumgrey;
+        .stat {
+            font-size: 330%;
+        }
+    }
+    div.kilo .stat-block.stats-bottom .stat {
+        font-size:270%;
+    }
 }
 
-.widget-plus-menu .plus-sign-menu .menu-content {
-    top:-10px;
-    right:22px;
-}
-
-.widget-plus-menu .plus-sign-menu .menu-content .arrow {
-    top:50%;
-    right:-12px;
-    margin-right:0px;
-    margin-top:-6px;
-    border-bottom: 6px solid transparent;
-    border-left: 6px solid @white;
-    border-top: 6px solid transparent;
-}
-
-.saving .stat-block .label {
-    // font-size:80%;
-    font-family:'Raleway', sans-serif;
-}
-.saving .stat-block .label:after {
-    font-size:100%;
-}
-.saving  .stat-block.stats-bottom {
-    border:1px solid @lightmediumgrey;
-}
-.saving .stat-block.stats-bottom .stat {
-    font-size: 330%;
-}
-
-.saving div.kilo .stat-block.stats-bottom .stat {
-    font-size:270%;
-}
-
-.printable-block {
-    display:none;
-}
-body.printable-block, #revenue-row-widget2 {
-    display:block;
-}
+// .printable-block {
+//     display:none;
+// }
+// body.printable-block, #revenue-row-widget2 {
+//     display:block;
+// }
 #revenue2 .notes-container {
     padding-right: 50px;
     padding-left: 10px;
