Login bug originated in react update fixed.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2248,6 +2248,10 @@ div#login section div.klerede-form div#options a:hover {
 }
 span#remember-checkmark div.legend-check-circle svg {
 	display:none;
+    fill:@white;
+    height:11px;
+    margin-left:3px;
+    margin-top:5px;
 }
 span#remember-checkmark div.legend-check-circle.active svg {
 	display:block;
