Add Note: datepicker css tweaks. Timepicker added.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -4,6 +4,7 @@
 @import "bootstrap/bootstrap";
 @import (inline) "jquery-ui.min.css";
 @import (inline) "react-datepicker.min.css";
+@import (inline) "jquery.timepicker.min.css";
 @import "colors";
 
 body, p, td, label, .checkbox label {
